# difformat

./: LICENSE  README.md  difformat.cabal  diffparser.cabal  justfile
app/: Main.hs
src/: Parser.hs  ToJSON.hs  Transformer.hs
test/: ParserSpec.hs  TransformerSpec.hs  example.diff
